# Kamino-Scope

programs/flash-perp-itf/: Cargo.toml
programs/flash-perp-itf/src/: lib.rs  states.rs
programs/scope/: Cargo.toml
programs/scope/src/: errors.rs  states.rs
programs/scope/src/oracles/: flash_lp.rs  mod.rs
programs/scope/src/utils/: math.rs
