[package]
name = "flash-perp-itf"
version = "0.1.0"
description = "Interface to interact with Flash Trade Liquidity Pools"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_perp_itf"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
test-bpf = []
debug = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "~1.16.18"
